[200~fix: button hover layout shift

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -19,45 +19,45 @@ __      _| | ___   __ _  ___  _   _| |_
  * ----------------------------------------------------- */
 
 * {
-    font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	background-image: none;
 	transition: 20ms;
 	box-shadow: none;
 }
 
 window {
-    font-family: Fira Code Medium;
+    font-family: "Fira Sans Semibold";
     font-size: 16pt;
     color: #cdd6f4; /* text */
-    background-color: rgba(30, 30, 46, 0.6);
+    background-color: rgba(30, 30, 46, 0.9);
 }
 
 button {
     border: none;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 20%;
+    background-size: 30%;
     background-color: rgba(200, 220, 255, 0);
-    border-radius: 50px; /* Increased border radius for a more rounded look */
+    border-radius: 50px; 
+    margin: 5px;
+    transition: all 0.2s ease-in-out, 
+                background-image 0.3s ease;
 }
 
 button:focus {
     background-size: 25%;
-    border: 0px;
 }
 
 button:hover {
-    background-color: rgb(145, 215, 227); 
-    color: #FFFFFF;
-    background-size: 70%;
-    margin: 5px;
-    border-radius: 50px; 
+    background-color: rgba(145, 215, 227, 0.9);
+    background-size: 50%;
 }
 
 /* Adjust the size of the icon or content inside the button */
 button span {
     font-size: 1.2em; /* Increase the font size */
 }/* 
+
 ----------------------------------------------------- 
 Buttons
 ----------------------------------------------------- 
